--- a/public/front/css/cate.css
+++ b/public/front/css/cate.css
@@ -116,3 +116,56 @@ body {
 .footer a.active {
   color: orange;
 }
+.main {
+  display: flex;
+}
+.cate-left {
+  width: 90px;
+  height: 100%;
+  background-color: #E3E4E5;
+  overflow: hidden;
+  position: relative;
+}
+.cate-left a {
+  display: block;
+  width: 90px;
+  height: 50px;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  background-color: #E3E4E5;
+  text-align: center;
+  line-height: 50px;
+  color: #666;
+}
+.cate-left a.active {
+  background-color: #fff;
+  border-right: none;
+  border-bottom: none;
+}
+.cate-right {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  background-color: #fff;
+  flex: 1;
+}
+.cate-right li {
+  float: left;
+  width: 33.33%;
+}
+.cate-right a {
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+.cate-right a img {
+  display: block;
+  width: 70px;
+  height: 50px;
+  margin: 0 auto;
+}
+.cate-right a p {
+  font-size: 14px;
+  margin-bottom: 10px;
+  color: #8f8f94 4;
+}
