--- a/public/front/css/index.css
+++ b/public/front/css/index.css
@@ -116,3 +116,19 @@ body {
 .footer a.active {
   color: orange;
 }
+/*导航*/
+.nav {
+  width: 100%;
+  background-color: #fff;
+}
+.nav ul {
+  padding: 5px;
+}
+.nav ul li {
+  float: left;
+  width: 33.33333333%;
+}
+.nav ul li img {
+  display: block;
+  margin: 0 auto;
+}
