--- a/public/front/css/searchList.css
+++ b/public/front/css/searchList.css
@@ -81,11 +81,17 @@ body {
   margin-bottom: 10px;
 }
 .productor li:nth-child(odd) {
-  margin-right: 24px;
+  margin-right: 11px;
 }
 .productor li .manry {
   text-align: left;
   height: 40px;
+}
+.productor li p span:first-child {
+  text-decoration: line-through;
+}
+.productor li p span:last-child {
+  color: red;
 }
 /*页脚*/
 .footer {
@@ -115,4 +121,63 @@ body {
 }
 .footer a.active {
   color: orange;
+}
+.search {
+  padding: 10px;
+  position: relative;
+  background-color: #fff;
+}
+.search input {
+  width: 100%;
+  height: 34px;
+  font-size: 15px;
+  text-align: left;
+  border: 1px solid #007AFF;
+  border-radius: 5px;
+  margin-bottom: 0;
+}
+.search button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+/*标题*/
+.title {
+  width: 100%;
+  height: 30px;
+  background-color: #eee;
+}
+.title li {
+  float: left;
+  width: 25%;
+}
+.title li a {
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 30px;
+  font-size: 12px;
+  color: #666;
+}
+.title li a.active {
+  color: orange;
+}
+.loading {
+  width: 50px;
+  height: 50px;
+  border: 2px solid #007AFF;
+  position: absolute;
+  top: 146%;
+  left: 50%;
+  transform: translateY(-50%);
+  /*参数 动画名称 动画完成时间 动画持续时间 动画执行路线*/
+  animation: rotate 1s infinite ease;
+}
+@keyframes rotate {
+  from {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateX(-50%) rotate(360deg);
+  }
 }
