--- a/public/front/less/common.less
+++ b/public/front/less/common.less
@@ -62,82 +62,49 @@ html,body{
   height:100%;
   position: relative;
   overflow: hidden;
+  background-color: #fff;
 }
- /*轮播图*/
+   /*轮播图*/
  .mui-slider-indicator{
   bottom: 30px;
   }
-
-  /*导航*/
-  .nav{
+  /*产品*/
+  .productor{
     width:100%;
-    height:400px;
-    background-color: #fff;
-    ul{
-      padding:5px;
-      li{
-        float:left;
-        width:100%/3; 
-        img{
-          display: block;
-          margin:0 auto;
-      }
-    }
-  }
-}
-/*产品去医院*/
-.productor{
-  width:100%;
-  // background-color: #fff;
-  a{
+    padding:10px;
 
-    background-color: #fff;
-  }
-  .mui-content{
-    margin-top:10px;
-   
+    box-sizing: border-box;
     li{
+      width:48%;
       border:1px solid #ccc;
+      background-color: #fff;
+      padding:10px;
+      float:left;
+      text-align: center;
+      margin-bottom: 10px;
+      &:nth-child(odd){
+        margin-right:11px;
+      }
+      .manry{
+        text-align: left;
+        height:40px;
+      }
+      p{
+        span:first-child{
+          text-decoration: line-through;
+          }
+        span:last-child{
+        color:red;
+        }
+      }
+     
     }
-  }
 
-       img{
-         width:130px;
-         height:130px;
-         display:block;
-         margin:0 auto;
-         margin-bottom: 10px;
-       }
-       p{
-         height:40px;
-         font-size:15px;
-       }
-       .manry{
-         padding-left:86px;
-         box-sizing: border-box;
-         line-height:25px;
-         height:20px;
-         span:first-child{
-           font-size:15px;
-           color:red;
-           margin-right:10px;
-         }
-         span:last-child{
-           font-size:15px;
-           text-decoration: line-through;
-         }
-       }
-       button{
-         width:83px;
-         height:33px;
-         background-color: #007aff;
-         color:#fff;
-         text-align: center;
-         line-height: 22px;
-        margin-left: 85px;
-       }
-      
-    }
+  }
+  
+
+
+
 
 
 /*页脚*/
